2012-09-19  Chris Schlumberger-Socha  <chris.schlumberger-socha@arm.com>

	* ld-aarch64/emit-relocs-309-low.d: Replace symbol with regexp.
	* ld-aarch64/emit-relocs-309-up.d: Likewise.

2012-09-19  Andrew Burgess  <aburgess@broadcom.com>

	* ld-scripts/assign-loc.d: New file.  Test for assigning absolute
	symbol to location counter.
	* ld-scripts/assign-loc.t: New file.  Linker script for above test.
	* ld-scripts/expr.exp: Add new assignment test.

2012-09-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/14591
	* ld-elf/comm-data.exp (run_ld_link_tests): Add comm-data3a and
	comm-data3b tests.

	* ld-ifunc/ifunc.exp (run_ld_link_exec_tests): New.

	* ld-elf/comm-data3.sd: New file.
	* ld-elf/comm-data3a.s: Likewise.
	* ld-elf/comm-data3b.s: Likewise.
	* ld-ifunc/ifunc-17a-i386.d: Likewise.
	* ld-ifunc/ifunc-17a-x86-64.d: Likewise.
	* ld-ifunc/ifunc-17a.s: Likewise.
	* ld-ifunc/ifunc-17b-i386.d: Likewise.
	* ld-ifunc/ifunc-17b-x86-64.d: Likewise.
	* ld-ifunc/ifunc-17b.s: Likewise.
	* ld-ifunc/ifunc-common-1.out: Likewise.
	* ld-ifunc/ifunc-common-1a.c: Likewise.
	* ld-ifunc/ifunc-common-1b.c: Likewise.

2012-09-17  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/shared.exp (build_cxx_tests): Move out the commented out
	test.

	* lib/ld-lib.exp (run_ld_link_exec_tests): Assemble all sources
	files in each test.

2012-09-12  Chris Schlumberger-Socha  <chris.schlumberger-socha@arm.com>

	* ld-aarch64/aarch64-elf.exp: New reloc tests.
	* ld-aarch64/emit-relocs-309-low-bad.d: New file. Expected asm for test
	failure (lower bound overflow).
	* ld-aarch64/emit-relocs-309-low.d: New file. Expected asm for test
	success (lower bound).
	* ld-aarch64/emit-relocs-309-up-bad.d: New file. Expected asm for test
	failure (upper bound overflow).
	* ld-aarch64/emit-relocs-309-up.d: New file. Expected asm for test
	success (upper bound).
	* ld-aarch64/emit-relocs-309.s: New file. Asm for new reloc tests.

2012-09-09  Hans-Peter Nilsson  <hp@bitrange.com>
